--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,7 @@
     "plugin:prettier/recommended",
     "eslint:recommended",
     "next",
-    "next/core-web-vitals",
-    "prettier"
+    "next/core-web-vitals"
   ],
   "ignorePatterns": [".next", ".eslintrc.json"],
   "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
