--- a/package.json
+++ b/package.json
@@ -9,22 +9,36 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@react-google-maps/api": "^2.19.3",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "lucide-react": "^0.344.0",
+    "google-map-react": "^2.2.1",
+    "lucide-react": "^0.353.0",
     "next": "14.1.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-places-autocomplete": "^4.0.1",
+    "react-hook-form": "^7.51.0",
+    "react-places-autocomplete": "^7.3.0",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-places-autocomplete": "^4.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
