--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.51.0",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.0",
+    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
